"Integra componentes com include-html (navbar e hero)"

--- a/index.html
+++ b/index.html
@@ -8,20 +8,26 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<header class="bg-dark text-white p-4 text-center">
-    <h1>devLeandroCoelho - Desenvolvedor FullStack</h1>
-    <p>Bem-vindo ao meu portfólio!</p>
-</header>
 
-<main class="container py-5">
-    <!-- Seções do portfólio -->
-</main>
+    <header class="bg-dark text-white p-4 text-center">
+        <h1>devLeandroCoelho - Desenvolvedor FullStack</h1>
+        <p>Bem-vindo ao meu portfólio!</p>
+    </header>
 
-<footer class="bg-light text-center py-4">
-    <p>&copy; 2025 Leandro. Todos os direitos reservados.</p>
-</footer>
+    <div include-html="component/navbar.html"></div>
+    <div include-html="component/hero.html"></div>
 
-<script src="js/bootstrap.bundle.min.js"></script>
-<script src="js/main.js"></script>
+    <main class="container py-5">
+        <!-- Seções do portfólio -->
+    </main>
+
+    <footer class="bg-light text-center py-4">
+        <p>&copy; 2025 Leandro. Todos os direitos reservados.</p>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="js/include-html.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
