Adiciona seção Sobre Mim ao portfólio

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <div include-html="component/navbar.html"></div>
     <div include-html="component/hero.html"></div>
+    <div include-html="component/sobre.html"></div>
+
 
     <main class="container py-5">
         <!-- Seções do portfólio -->
@@ -26,7 +28,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="js/include-html.js"></script>
     <script src="js/main.js"></script>
 </body>
