--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <div include-html="component/navbar.html"></div>
     <div include-html="component/hero.html"></div>
+    <div include-html="component/projetos.html"></div>
     <div include-html="component/sobre.html"></div>
 
 
