Adiciona seção de Contato com links e formulário estilizado

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div include-html="component/hero.html"></div>
     <div include-html="component/projetos.html"></div>
     <div include-html="component/sobre.html"></div>
+    <div include-html="component/contato.html"></div>
+
 
 
     <main class="container py-5">
