--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <title>Meu Portfólio</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
-
-    <header class="bg-dark text-white p-4 text-center">
-        <h1>devLeandroCoelho - Desenvolvedor FullStack</h1>
-        <p>Bem-vindo ao meu portfólio!</p>
-    </header>
-
     <div include-html="component/navbar.html"></div>
+
+<!-- Hero section já cuida da saudação, pode remover este header se quiser -->
     <div include-html="component/hero.html"></div>
     <div include-html="component/projetos.html"></div>
     <div include-html="component/sobre.html"></div>
