--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="/js/bootstrap.bundle.js"></script>
+    <script src="js/bootstrap.bundle.js"></script>
     <script src="js/include-html.js"></script>
     <script src="js/main.js"></script>
 </body>
