--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </main>
 
     <footer class="bg-light text-center py-4">
-        <p>&copy; 2025 Leandro. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Leandro. Todos os direitos reservados, mas copiar faz parte!</p>
     </footer>
 
     <!-- Scripts -->
